review fixes
- change `nodes` method signature to force user to provide at least one node name
- add validation that all data providers belongs to a node of the cluster
- improve assertion message in case of someone tries to get not configured dataProvider
- typos